# checkpoints

./: .clang-format  CMakeLists.txt  addSequenceDialog.cpp  checkpointsPlugin.cpp  checkpointsPlugin.pro  form.cpp  form.ui  readme.md  resources.qrc  sequences.cpp  sequences.h
checkpointsplugin/: CMakeLists.txt  addChpDialog.ui  addSequenceDialog.h  checkpointsPlugin.cpp  checkpointsPlugin.h  form.cpp  form.h  form.ui  formtmp.ui
patches/: add_checkpoints_subdir.patch
src/: mainwindow.ui
